--- a/package.json
+++ b/package.json
@@ -42,5 +42,19 @@
     },
     "dependencies": {
         "@actions/core": "^1.2.6"
+    },
+    "devDependencies": {
+        "@types/chai": "^4.2.15",
+        "@types/mocha": "^8.2.0",
+        "@types/node": "^14.14.25",
+        "@types/sinon": "^9.0.10",
+        "chai": "^4.3.0",
+        "commitizen": "^4.2.3",
+        "mocha": "^8.2.1",
+        "nyc": "^15.1.0",
+        "sinon": "^9.2.4",
+        "tslint": "^6.1.3",
+        "typedoc": "^0.20.24",
+        "typescript": "^4.1.5"
     }
 }
