--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
         "access": "restricted"
     },
     "dependencies": {
-        "@actions/core": "^1.2.6",
-        "@actions/github": "^4.0.0",
-        "ajv": "^7.1.0"
+        "@actions/core": "~1.2.6",
+        "@actions/github": "~4.0.0",
+        "@donmahallem/sync-gist": "~0.1.3",
+        "ajv": "~7.1.0"
     },
     "devDependencies": {
         "@octokit/types": "6.8.4",
