--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build:lib": "tsc --project ./tsconfig.lib.json --outDir ./dist/lib",
         "build:action": "ncc build ./src/action.ts -o ./dist/action",
         "build:readme": "npx @appnest/readme generate --input ../package_readme_blueprint.md --config readme_config.json",
-        "test": "mocha --config ../../.mocharc.yml",
+        "test": "mocha --config ./.mocharc.yml",
         "test:coverage": "nyc --nycrc-path ../../.nycrc.json npm run test",
         "lint": "tslint -c tslint.json -p tsconfig.json src/**/*.ts",
         "lint:fix": "tslint --fix -c tslint.json -p tsconfig.json src/**/*.ts",
@@ -59,6 +59,7 @@
         "mocha": "8.2.1",
         "nyc": "15.1.0",
         "sinon": "9.2.4",
+        "ts-node": "9.1.1",
         "tslint": "6.1.3",
         "typedoc": "0.20.24",
         "typescript": "4.1.5"
