--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "private": true,
     "keywords": [],
     "scripts": {
-        "build": "tsc --project ./tsconfig.json",
+        "build": "npm run build:lib && npm run build:action",
+        "build:lib": "tsc --project ./tsconfig.lib.json --outDir ./dist/lib",
+        "build:action": "ncc build ./src/action.ts -o ./dist/action",
         "build:readme": "npx @appnest/readme generate --input ../package_readme_blueprint.md --config readme_config.json",
-        "test": "mocha --config ../../.mocharc.yml",
-        "test:coverage": "nyc --nycrc-path ../../.nycrc.json npm run test",
+        "test": "mocha --config ./.mocharc.yml",
+        "test:coverage": "nyc --nycrc-path ./.nycrc.json npm run test",
         "lint": "tslint -c tslint.json -p tsconfig.json src/**/*.ts",
         "lint:fix": "tslint --fix -c tslint.json -p tsconfig.json src/**/*.ts",
-        "docs": "typedoc --options ../../typedoc.json"
+        "docs": "typedoc --options ./typedoc.json"
     },
     "homepage": "https://donmahallem.github.io/gist-deploy/",
     "author": {
@@ -40,18 +42,24 @@
         "access": "restricted"
     },
     "dependencies": {
-        "@actions/core": "^1.2.6"
+        "@actions/core": "~1.2.6",
+        "@actions/github": "~4.0.0",
+        "@donmahallem/sync-gist": "~0.1.3",
+        "ajv": "~7.1.0"
     },
     "devDependencies": {
+        "@octokit/types": "6.8.4",
         "@types/chai": "4.2.15",
         "@types/mocha": "8.2.0",
         "@types/node": "14.14.25",
         "@types/sinon": "9.0.10",
+        "@vercel/ncc": "0.27.0",
         "chai": "4.3.0",
         "commitizen": "4.2.3",
         "mocha": "8.2.1",
         "nyc": "15.1.0",
         "sinon": "9.2.4",
+        "ts-node": "9.1.1",
         "tslint": "6.1.3",
         "typedoc": "0.20.24",
         "typescript": "4.1.5"
