--- a/action.yml
+++ b/action.yml
@@ -2,5 +2,5 @@ name: 'gist-deploy'
 description: 'Copy files to gist'
 runs:
   using: node12
-  main: dist/index.js
+  main: dist/action/index.js
   pre: npm install && npm build:action
