chore: add gist_id to action.yml inputs

--- a/action.yml
+++ b/action.yml
@@ -8,3 +8,6 @@ inputs:
   github_secret:
     description: 'A github secret to use'
     required: true
+  gist_id:
+    description: 'The gist id to push to'
+    required: true
