chore: include all ts files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     ],
     "baseUrl": "./src",
     "include": [
-        "./src/*.ts"
+        "./src/*.ts",
+        "./src/**/*.ts"
     ],
 }
