--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "ajv": "~8.8.2"
     },
     "devDependencies": {
+        "@donmahallem/eslint-config": "0.4.3",
         "@octokit/types": "6.29.0",
         "@types/chai": "4.2.22",
         "@types/mocha": "9.0.0",
@@ -56,8 +57,10 @@
         "@vercel/ncc": "0.32.0",
         "chai": "4.3.4",
         "commitizen": "4.2.4",
+        "eslint": "8.3.0",
         "mocha": "9.1.3",
         "nyc": "15.1.0",
+        "prettier": "2.4.1",
         "sinon": "12.0.1",
         "ts-node": "10.4.0",
         "tslint": "6.1.3",
