--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "build:readme": "npx @appnest/readme generate --input ../package_readme_blueprint.md --config readme_config.json",
         "test": "mocha --config ./.mocharc.yml",
         "test:coverage": "nyc --nycrc-path ./.nycrc.json npm run test",
-        "lint": "tslint -c tslint.json -p tsconfig.json src/**/*.ts",
-        "lint:fix": "tslint --fix -c tslint.json -p tsconfig.json src/**/*.ts",
+        "lint": "eslint -c ./.eslintrc.js --ext .ts ./src",
+        "postlint": "prettier --config ./.prettierrc src/**/*.ts --check",
+        "lint:fix": "eslint -c ./.eslintrc.js --ext .ts ./src --fix",
+        "postlint:fix": "prettier --config ./.prettierrc src/**/*.ts --write",
         "docs": "typedoc --options ./typedoc.json"
     },
     "homepage": "https://donmahallem.github.io/gist-deploy/",
@@ -63,7 +65,6 @@
         "prettier": "2.4.1",
         "sinon": "12.0.1",
         "ts-node": "10.4.0",
-        "tslint": "6.1.3",
         "typedoc": "0.22.9",
         "typescript": "4.5.2"
     }
